--- a/com.worldline.awltech.rcs4e.parent/com.worldline.awltech.rcs4e.repository/pom.xml
+++ b/com.worldline.awltech.rcs4e.parent/com.worldline.awltech.rcs4e.repository/pom.xml
@@ -29,7 +29,7 @@
 						<goals>
 							<goal>generate-index</goal>
 						</goals>
-						<phase>install</phase>
+						<phase>package</phase>
 					</execution>
 				</executions>
 			</plugin>
